spacing issues fixed

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -104,7 +104,7 @@ main {
 }
 
 .text h2 {
-	@include fontSize(24);
+	@include fontSize(18);
 	position: relative;
 	left: -25px;
 	
@@ -164,7 +164,7 @@ div.text {
 	background: $blue;
 	width: 29%;
 	margin: 45px -14px 45px 47px;
-	padding: 15px 30px 10px 65px;
+	padding: 15px 20px 10px 65px;
 	border: 4px solid black;
 }
 
